# 4-point-correlation

./: CMakeLists.txt  Compute_Eigenstate_OTOC.cpp  Detector.cpp  Duschrinsky_rotation.cpp  Eigenvalue_spectrum.cpp  Full_system.cpp  Lanczos_and_MFT.cpp  MFD.cpp  New_MKL_file.cpp  System.cpp  USE_MKL_MODULE.cpp  Vibration_symmetry_analysis.cpp  auxiliary_function.cpp  input_format.docx  main.cpp  system.h  util.h  vanvlk_construct_detector_offdiag.cpp
MPI_Code/: Another_form_of_OTOC.cpp  Boltzmann_factor_Chebyshev.cpp  Chebychev_propagator.cpp  Communication_function_MPI.cpp  Compute_Off_diagonal_full_system_MPI.cpp  Detector_Evolve_MPI.cpp  OTOC_for_xp.cpp  Read_MPI.cpp  Rotation.cpp  System_Read_MPI.cpp  Verify_TOC_factorization.cpp  compute_detector_energy_window_MPI.cpp  construct_detector_MPI.cpp  construct_full_system_MPI.cpp  ladder_operator_operation.cpp  regularized_Thermal_OTOC.cpp  save_load_detector_MPI.cpp  unregularized_Thermal_OTOC.cpp
